# P2P_Network

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.bootstrap.yml  docker-compose.regular.yml  docker-compose.yml  generate_configs.sh  get_logs.sh  node_principal.txt  start-bootstrap.sh  start-regular.sh  start_nodes.sh  stop-all.sh
config/: bootstrap_node1.yaml  bootstrap_node2.yaml  bootstrap_node3.yaml  regular_node1.yaml  regular_node2.yaml  regular_node3.yaml  regular_node4.yaml
identities/: node100_config.yaml  node10_config.yaml  node11_config.yaml  node12_config.yaml  node13_config.yaml  node14_config.yaml  node15_config.yaml  node16_config.yaml  node17_config.yaml  node18_config.yaml  node19_config.yaml  node1_config.yaml  node20_config.yaml  node21_config.yaml  node22_config.yaml  node23_config.yaml  node24_config.yaml  node25_config.yaml  node26_config.yaml  node27_config.yaml  node28_config.yaml  node29_config.yaml  node2_config.yaml  node30_config.yaml  node31_config.yaml  node32_config.yaml  node33_config.yaml  node34_config.yaml  node35_config.yaml  node36_config.yaml  node37_config.yaml  node38_config.yaml  node39_config.yaml  node3_config.yaml  node40_config.yaml  node41_config.yaml  node42_config.yaml  node43_config.yaml  node44_config.yaml  node45_config.yaml  (+60 more)
logs/node1/: verification_log.txt
logs/node10/: verification_log.txt
logs/node100/: verification_log.txt
logs/node11/: verification_log.txt
logs/node12/: verification_log.txt
logs/node13/: verification_log.txt
logs/node14/: verification_log.txt
logs/node15/: verification_log.txt
logs/node16/: verification_log.txt
mock-ic/: index.html  package-lock.json  package.json  registry.json  server.js
scripts/: generate_identities.sh  start_nodes.sh
src/: bootstrap.rs  main.rs  message_signing.rs  node.rs  regular.rs
(+102 files in other folders)
