[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "ping", "tokio"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
ed25519-dalek = "1.0"
sha2 = "0.10"
candid = "0.9"
ic-cdk = "0.11"