[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "ping", "tokio", "request-response", "macros"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
ed25519-dalek = "1.0"
sha2 = "0.10"
candid = "0.9"
ic-cdk = "0.11"
public-ip = "0.2"
ic-agent = "0.29"
hex = "0.4"

[[bin]]
name = "list_active_peers"
path = "src/bin/list_active_peers.rs"