[package]
name = "p2p"
version = "0.1.0"
edition = "2021"
default-run = "p2p"

[dependencies]
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "ping", "tokio", "request-response", "macros"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
ed25519-dalek = "1.0.1"
sha2 = "0.10"
candid = "0.9"
ic-cdk = "0.11"
public-ip = "0.2"
ic-agent = "0.29"
hex = "0.4"
rand = "0.7.3"
clap = { version = "4.4", features = ["derive"] }


[[bin]]
name = "p2p"
path = "src/main.rs"

